[package]
name = "vgmck"
version = "0.1.0"
edition = "2021"
description = "MML to VGM compiler - Rust port of vgmck"
license = "GPL-3.0-or-later"
authors = ["Moriyoshi Koizumi", "zzo38"]

[dependencies]
thiserror = "2"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
